# gpass-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: blank.yml  devskim.yml  rust.yml
gpass-bin/: Cargo.toml
gpass-bin/src/: main.rs  user_args.rs
src/: colors.rs  env.rs  error_make.rs  file_input.rs  lib.rs  masks.rs  reverse.rs  tests.rs
