[package]
name = "gpassx"
version = "0.5.5"
edition = "2021"
description = "A library+executable to implement a simple multi-functionality secure command-line password input"
repository = "https://www.github.com/loggerheads-with-binary/gpass-rs"
authors = ["Aniruddh Radhakrishnan<aniruddh.iitb.92@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive", "env", "wrap_help", "suggestions", "color"] }
eyre = "0.6.8"
gpass-rs = {path = "../"  , features = [ "env" , "reverse" ]}

# Activate feature gpass-rs "colored" if feature colored is enabled 
[features]
colored = ["gpass-rs/colored"]